crates/typechecker/tests/snapshots/fixture_test__hkt_arity2.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
Pair: forall f g. fn(f, g) -> Pair[f, g]
Bifunctor$Pair$bimap: fn(Pair[d1, e1], fn(d1) -> h1, fn(e1) -> i1) -> own Pair[h1, i1]
