crates/typechecker/tests/snapshots/fixture_test__hkt_explicit_kind.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall f. fn(f, f) -> Bool
lt: forall g. fn(g, g) -> Bool
combine: forall f. fn(f, f) -> f
sub: forall f. fn(f, f) -> f
mul: forall f. fn(f, f) -> f
div: forall f. fn(f, f) -> f
neg: forall f. fn(f) -> f
show: forall f. fn(f) -> String
hash: forall f. fn(f) -> Int
close: forall f. fn(own f) -> Unit
peek: forall g. fn(g) -> g
println: forall l. fn(l) -> Unit
Some: forall e. fn(e) -> Option[e]
None: forall e. Option[e]
Ok: forall f g. fn(g) -> Result[f, g]
Err: forall f g. fn(f) -> Result[f, g]
Cons: forall h. fn(h, List[h]) -> List[h]
Nil: forall h. List[h]
LT: Ordering
EQ: Ordering
GT: Ordering
