crates/typechecker/tests/snapshots/fixture_test__hkt_function.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
eq: forall c. fn(c, c) -> Bool
lt: forall d. fn(d, d) -> Bool
add: forall c. fn(c, c) -> c
sub: forall c. fn(c, c) -> c
mul: forall c. fn(c, c) -> c
div: forall c. fn(c, c) -> c
neg: forall c. fn(c) -> c
show: forall c. fn(c) -> String
close: forall c. fn(own c) -> Unit
println: forall i. fn(i) -> Unit
Some: forall b. fn(b) -> Option[b]
None: forall b. Option[b]
Ok: forall c d. fn(d) -> Result[c, d]
Err: forall c d. fn(c) -> Result[c, d]
Cons: forall e. fn(e, List[e]) -> List[e]
Nil: forall e. List[e]
LT: Ordering
EQ: Ordering
GT: Ordering
Box: forall j. fn(j) -> Box[j]
apply: forall a1 b1. fn(a1[b1]) -> a1[b1]
main: fn(Box[Int]) -> Box[Int]
Functor$Box$fmap: fn(Box[t1], fn(t1) -> v1) -> own Box[v1]
Hoist$Int$hoist: fn(x[Int], fn(x[Int]) -> y[Int]) -> y[Int]
